2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php,
	include/config_process.php: Moved code from 
	config.inc.php to config_process.php

2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php: Removed comment to keep
	comments up to date.

2013-11-26  Dario Rodriguez <dario@artica.es>

	* include/functions_graph.php,
	include/graphs/fgraph.php,
	include/functions_incidents.php,
	operation/invoices/invoice_stats.php,
	operation/leads/lead_statistics.php: Adapted graphs and report
	to user new base url which support http, https and ports.

2013-11-25  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php,
	install.php,
	godmode/setup/setup.php: Fixed an error generating
	base_url_dir for base_url variable.

2013-11-25  Dario Rodriguez <dario@artica.es>

	* include/config.inc.php,
	install.php: Now we detect automatically the folder of integria
	* operation/projects/project_report.php: Fixed a wrong parameter
	printing project activity graph.
	* godmode/setup/setup.php: Removed some
	depreacted setup options

2013-11-25  Sancho Lerena <slerena@artica.es>

	* operation/newsletter/address_definition.php: Added filter to 
	see disabled addresses on each newsletter.

2013-11-25 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/update_manager.php: continue with the work in the
	update manager.

2013-11-25 Dario Rodriguez <dario@artica.es>

	* include/config.inc.php: Added new parameter to allow
	to change url after installation.
	* include/integria_cron.php: Modify to support new changes on
	public url.
	* include/functions_config.phpi: Added new variables to configure
	access url.
	* include/config_process.php: Create new urls with those variables.
	* install.php: Modify install to get only url path not ip.
	* index.php: Fixed a problem disabling flash charts when creating pdf
	reports.
	* operation/projects/project_report.php: Added correct parameter to 
	select static or flash charts.