@@ -44,7 +44,10 @@ INSERT INTO `tconfig` (`token`, `value`) VALUES
 ('max_days_wo', 365),
 ('max_days_audit', 15),
 ('max_days_session', 7),
-('update_manager_installed', 1);
+('update_manager_installed', 1),
+('current_package', 0),
+('url_updatemanager', ''),
+('license', '');
 
 -- Default password is 'integria'
 
